# greedy-list-colouring

./: Makefile  README.md  pyproject.toml
src/: petersen-shell-node.py  petersen-shell-total.py  petersen-shell.py  random-graph.py
