[tool.poetry]
name = "greedy-list-colouring"
version = "0.1.0"
description = "Greedy list and greedy list-edge colouring in Python with the listcolouring package."
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
listcolouring = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
